--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,4 +1,4 @@
-{% render 'product-template', product: product, section: section %}
+{% render 'product-ilda', product: product, section: section %}
 
 {% schema %}
   {
